--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+    useLibrary 'org.apache.http.legacy'
+
 
     defaultConfig {
         applicationId "com.ezmoizy.abdulmoiz.warmup2"
-        minSdkVersion 22
-        targetSdkVersion 23
+        minSdkVersion 18
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -26,4 +28,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 }
