--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MenuActivity"
+            android:name=".MainActivity"
             android:label="McMaster Map"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
